# mini-project

./: .gitignore
backend/: docker-compose.yml
backend/api/: .env.example  package-lock.json  package.json  tsconfig.json
backend/api/src/: server.ts
backend/api/src/config/: index.ts
backend/api/src/handlers/: upload.ts
backend/api/src/lib/: supabase.ts
backend/api/src/routes/: index.ts
backend/api/src/types/: index.ts
backend/classification-service/: Dockerfile  pyproject.toml
backend/classification-service/app/: main.py
backend/classification-service/app/model/: clean_dataset.py  model_rf.py
backend/classification-service/app/routes/: router.py
backend/classification-service/app/scripts/: native_3gram_pipeline.py
frontend/: package-lock.json
frontend/app/: page.tsx
frontend/app/components/: Particles.tsx
